--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
     min-height: 100%;
     text-align: center;
     background-color: rgba(188, 199, 207, 0.63);
+    background-image: linear-gradient(rgba(169, 195, 235, 0.271), white, white, white);
 ;
     }
     
@@ -14,6 +15,11 @@ body{
     img{
         max-width: 90%;
         box-shadow: 2px 2px 3px lightgrey;
+        margin: 20px 0px;
+        border: 1px;
+        border-color: lightgrey;
+        border-style: solid;
+        transition: transform .8s;
     }
     header a{
         color: black;
@@ -25,9 +31,9 @@ body{
     }
     header {
         grid-area: header;
-        box-shadow: 2px 2px 3px grey;
+        box-shadow: 2px 2px 3px rgb(150, 150, 150);
         text-align: left;
-        background-color: rgba(255, 255, 255, 0.773);
+        background-color: white;
         height: 100px;
         display: grid;
         
@@ -40,28 +46,116 @@ body{
       
       footer {
         grid-area: footer;
+        background-color: rgba(169, 195, 235, 0.271);
+        text-align: center;
+        position: relative;
+        margin-top: 50px;
+        display: grid;
+        color: black;
+        border-top: solid;
+        border-width: 1px;
+        border-color: rgba(169, 195, 235, 0.271);
       }
 
+      footer p{
+          margin: 150px 0px 20px;
+      }
+
+      h1{
+          border-bottom: solid;
+          border-width: 1px;
+          border-color: black;
+          padding: 40px 0px 15px;
+          font-size: 36px;
+          letter-spacing: 2px;
+      }
       h1, h2{
-        font-family: 'Joan', serif;
+        font-family: 'Raleway Medium', sans-serif;
+      }
+
+      h2{
+        letter-spacing: 1px;
       }
 
       .cards{
           display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
+          grid-template-columns: 1fr;
           grid-gap: 10px;
+          justify-items: center;
       }
 
       .cards a{
-          display: grid;
+          display: inline-block;
+          padding: 5px 10px;
+          background-color: white;
+          margin: 0px 5px 20px;
+          color:black;
+          text-transform: uppercase;
+          box-shadow: 2px 2px 3px lightgrey;
+          border: 1px;
+          border-color: lightgrey;
+          border-style: solid;
+          font-size: 14px;
+          transition: transform .2s;
+          font-family: 'Raleway Light', sans-serif;
+          letter-spacing: 1px;
       }
+      .cards a:hover{
+        transform: scale(1.05);
+        background-color: rgba(188, 199, 207, 0.63);
+     }
 
       .cards div{
-        box-shadow: 2px 2px 3px grey;
-        background-color: white;
+        box-shadow: 2px 2px 3px lightgrey;
+        background-color: rgb(249, 249, 249);
+        width: 50%;
+        border-color: lightgrey;
+        border-style: solid;
+        border-width: 1px;
+        transition: transform .8s;
+        margin-bottom: 30px;
       }
 
-      p{
-          text-align: left;
-          margin: 10px;
+      .cards div:hover{
+        transform: scale(1.02);
       }
+
+      .cards IMG:hover{
+         transform: scale(1.5);
+      }
+     .cards p{
+          text-align: left;
+          margin: 10px 5px 15px;
+          font-family: 'Raleway ExtraLight', sans-serif;
+          display: inline-block;
+          font-size: 14px;
+          background-color: rgba(169, 195, 235, 0.271);
+          padding: 5px 15px;
+          box-shadow: 1px 1px 1px lightgrey;
+
+      }
+
+      p:first-of-type{
+
+        display: block;
+        background-color: rgb(249, 249, 249);
+        border-style: none;
+        box-shadow: none;
+        font-size: 16px;
+      }
+
+       /*tablet styles*/
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+.cards div{
+    width: 80%;
+}
+}
+
+/* Mobile styles*/
+
+@media only screen and (max-width: 480px) {
+    .cards div{
+        width: 100%;
+    }
+}
