--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,11 @@ body{
     width: 100%;
     min-height: 100%;
     text-align: center;
-    background-color: rgba(188, 199, 207, 0.63);
-    background-image: linear-gradient(rgba(169, 195, 235, 0.271), white, white, white);
-;
+    background-color: #B21B70;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23B21B70' cx='50' cy='0' r='50'/%3E%3Cg fill='%23b62c75' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23b93a7b' cx='50' cy='100' r='50'/%3E%3Cg fill='%23bd4681' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c05186' cx='50' cy='200' r='50'/%3E%3Cg fill='%23c35b8c' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c66592' cx='50' cy='300' r='50'/%3E%3Cg fill='%23c96e97' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%23cc789d' cx='50' cy='400' r='50'/%3E%3Cg fill='%23cf81a3' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%23d28aa9' cx='50' cy='500' r='50'/%3E%3Cg fill='%23d494af' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%23d79db4' cx='50' cy='600' r='50'/%3E%3Cg fill='%23d9a6ba' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23dbafc0' cx='50' cy='700' r='50'/%3E%3Cg fill='%23ddb8c6' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23dfc1cc' cx='50' cy='800' r='50'/%3E%3Cg fill='%23e1cad3' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23e2d3d9' cx='50' cy='900' r='50'/%3E%3Cg fill='%23e4dcdf' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23E5E5E5' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: contain;
+    ;
     }
     
     body a{
@@ -22,20 +24,21 @@ body{
         transition: transform .8s;
     }
     header a{
-        color: black;
+        color: white;
         font-size: 35px;
         margin-top: 40px;
         margin-left: 10px;
-        font-family: 'La Belle Aurore', cursive;
+        font-family: 'Major Mono Display', sans-serif;
 
     }
     header {
         grid-area: header;
-        box-shadow: 2px 2px 3px rgb(150, 150, 150);
         text-align: left;
-        background-color: white;
+        background-color: transparent;
         height: 100px;
         display: grid;
+        border: none;
+        border-color: white;background-color: rgba(255, 255, 255, 0.2);
         
       }
       
@@ -62,18 +65,14 @@ body{
       }
 
       h1{
-          border-bottom: solid;
-          border-width: 1px;
-          border-color: black;
           padding: 40px 0px 15px;
           font-size: 36px;
           letter-spacing: 2px;
+          font-family: 'Major Mono Display', sans-serif;
       }
-      h1, h2{
-        font-family: 'Raleway Medium', sans-serif;
-      }
-
+      
       h2{
+        font-family: 'Raleway Medium', sans-serif;
         letter-spacing: 1px;
       }
 
